--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -84,7 +84,7 @@
             </tr>
             <tr>
               <td class="message searchable">
-                ${context.parent.wiki_to_html(attachment.description)}
+                ${wiki_to_html(context.parent, attachment.description)}
               </td>
             </tr>
           </tbody>
