--- a/templates/macros.html
+++ b/templates/macros.html
@@ -175,7 +175,7 @@
           <py:for each="attachment in attachments" py:with="ctx = context('attachment', attachment.filename)">
             <li>
               ${show_one_attachment(attachment)}
-              <q py:if="compact and attachment.description">${ctx.wiki_to_oneliner(attachment.description)}</q>
+              <q py:if="compact and attachment.description">${wiki_to_oneliner(ctx, attachment.description)}</q>
             </li>
           </py:for>
         </ul>
@@ -187,7 +187,7 @@
             <py:for each="attachment in attachments"
               py:with="ctx = context('attachment', attachment.filename)">
               <dt>${show_one_attachment(attachment)}</dt>
-              <dd py:if="attachment.description">${ctx.wiki_to_oneliner(attachment.description)}</dd>
+              <dd py:if="attachment.description">${wiki_to_oneliner(ctx, attachment.description)}</dd>
             </py:for>
           </dl>
           <form py:if="attach_href" method="get" action="$attach_href">
