--- a/templates/ticket_history.html
+++ b/templates/ticket_history.html
@@ -51,7 +51,7 @@
               </td>
               <td class="date">${format_datetime(item.date)}</td>
               <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None}">$item.author</td>
-              <td class="comment">${context.wiki_to_oneliner(item.comment, shorten=True)}</td>
+              <td class="comment">${wiki_to_oneliner(context, item.comment, shorten=True)}</td>
             </tr>
           </tbody>
         </table>
