--- a/templates/ticket_diff.html
+++ b/templates/ticket_diff.html
@@ -13,13 +13,13 @@
   </head>
 
   <body>
-    <div id="ctxtnav" class="nav">
-      <h2>Ticket Navigation</h2>
-      ${prevnext_nav('Change', 'Ticket History')}
+    <div id="ctxtnav" class="nav" py:with="realm = context.realm.capitalize()">
+      <h2>$realm Navigation</h2>
+      ${prevnext_nav('Change', realm + ' History')}
       <hr />
     </div>
 
-    <div id="content" class="ticket">
+    <div id="content" class="${context.realm}">
       <h1 py:choose="">Changes
         <py:when test="old_version">between
           <a href="${context.resource_href(version=old_version)}">Version $old_version</a> and
@@ -31,8 +31,7 @@
         <a href="${context.resource_href(version=new_version)}">Version $new_version</a> of
         <a href="${context.resource_href()}">${context.name()}</a>
       </h1>
-      <form method="post" id="prefs"
-            action="${context.resource_href(action='diff', old_version=old_version, version=new_version)}">
+      <form method="post" id="prefs" action="${context.resource_href()}">
         <div>
           <input type="hidden" name="action" value="diff" />
           <input type="hidden" name="version" value="$new_version" />
