--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -304,6 +304,7 @@ a.missing:link, a.missing:visited, span.missing { color: #998 }
 a.missing:link, a.missing:visited { background: #fafaf0 }
 a.missing:hover { color: #000 }
 a.closed:link, a.closed:visited { text-decoration: line-through }
+span.closed { text-decoration: line-through }
 
 dl.wiki dt { font-weight: bold }
 dl.compact dt { float: left; padding-right: .5em }
