--- a/htdocs/css/report.css
+++ b/htdocs/css/report.css
@@ -14,6 +14,8 @@ h2 {
 }
 #report-descr { margin: 0 2em; font-size: 90% }
 #report-notfound { margin: 2em; font-size: 110% }
+#content.report .field { margin: 1em 0; }
+#content.report .field label { padding-bottom: .3em; }
 
 #query { clear: right }
 #query fieldset, #query fieldset input, #query fieldset select { font-size: 11px }
